edited css trying to fix an image not showing in prod

--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@ button {
   border: none;
   border-radius: 8px;
   padding: 9px 10px 9px 39px;
-  background: rgba(255, 255, 255, 0.9) url("src/assets/img/google-icon-32.png") no-repeat 10px center/23px;
+  background: rgba(255, 255, 255, 0.9) url("./src/assets/img/google-icon-32.png") no-repeat 10px center/23px;
   transition-duration: 250ms;
 }
 
